# FFmpegAndroidPlayer

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/castle/ffmpeg/player/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FFSurfaceView.cpp  decoder.c  main_entry.c  mediatimer.c  native_audio.c  native_lib.cpp  player.c
app/src/main/cpp/include/: FFSurfaceView.h
app/src/main/cpp/include/libnative-lib/: decoder.h  mediainfo.h  mediatimer.h  player.h  playerstate.h  util.h
app/src/main/java/com/castle/ffmpeg/player/: SimpleApplication.kt
app/src/main/java/com/castle/ffmpeg/player/activity/: MainActivity.kt  NativeAudioActivity.kt
app/src/main/java/com/castle/ffmpeg/player/extensions/: Extension.kt
app/src/main/java/com/castle/ffmpeg/player/utils/: TimberResponseHandler.kt
app/src/main/java/com/castle/ffmpeg/player/view/: FFSurfaceView.kt
app/src/main/res/layout/: activity_main.xml  activity_native_audio.xml
app/src/test/java/com/castle/ffmpeg/player/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
